--- a/GemStone.Helper/Launchd.plist
+++ b/GemStone.Helper/Launchd.plist
@@ -4,24 +4,10 @@
 <dict>
 	<key>Label</key>
 	<string>com.GemTalk.GemStone.Helper</string>
-	<key>ProgramArguments</key>
-	<array>
-		<string>This element is &quot;required&quot; by launchd (see the launchd.plist(5) man page), </string>
-		<string>but it is actually replaced by SMJobBless() (see ServiceManagement.h)</string>
-	</array>
-	<key>Sockets</key>
+	<key>MachServices</key>
 	<dict>
-		<key>MasterSocket</key>
-		<dict>
-			<key>SockFamily</key>
-			<string>Unix</string>
-			<key>SockPathMode</key>
-			<integer>438</integer>
-			<key>SockPathName</key>
-			<string>/var/run/com.GemTalk.GemStone.socket</string>
-			<key>SockType</key>
-			<string>Stream</string>
-		</dict>
+		<key>com.GemTalk.GemStone.Helper</key>
+		<true/>
 	</dict>
 </dict>
 </plist>
