--- a/Helper/Info.plist
+++ b/Helper/Info.plist
@@ -3,16 +3,18 @@
 <plist version="1.0">
 <dict>
 	<key>CFBundleIdentifier</key>
-	<string>com.GemTalk.GemStoneHelper</string>
+	<string>com.GemTalk.GemStone.Helper</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>GemStoneHelper</string>
+	<string>GemStone.Helper</string>
+	<key>CFBundleShortVersionString</key>
+	<string>1.3.3.9</string>
 	<key>CFBundleVersion</key>
-	<string>1.0</string>
+	<string>35</string>
 	<key>SMAuthorizedClients</key>
 	<array>
-		<string>identifier &quot;com.GemTalk.GemStoneApp&quot; and anchor apple generic and certificate leaf[subject.CN] = &quot;Mac Developer: James Foster (5HVEZ5GM35)&quot; and certificate 1[field.1.2.840.113635.100.6.2.1] /* exists */</string>
+		<string>identifier "com.GemTalk.GemStone" and anchor apple generic and certificate leaf[subject.CN] = "Mac Developer: James Foster (5HVEZ5GM35)" and certificate 1[field.1.2.840.113635.100.6.2.1] /* exists */</string>
 	</array>
 </dict>
 </plist>
