--- a/Helper/Info.plist
+++ b/Helper/Info.plist
@@ -9,9 +9,9 @@
 	<key>CFBundleName</key>
 	<string>GemStone.Helper</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.3.3.9</string>
+	<string>1.4.0</string>
 	<key>CFBundleVersion</key>
-	<string>8D</string>
+	<string>C2</string>
 	<key>SMAuthorizedClients</key>
 	<array>
 		<string>identifier "com.GemTalk.GemStone" and anchor apple generic and certificate leaf[subject.CN] = "Mac Developer: James Foster (5HVEZ5GM35)" and certificate 1[field.1.2.840.113635.100.6.2.1] /* exists */</string>
