--- a/Helper/Info.plist
+++ b/Helper/Info.plist
@@ -9,12 +9,12 @@
 	<key>CFBundleName</key>
 	<string>GemStone.Helper</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.4.0</string>
+	<string>1.4.1</string>
 	<key>CFBundleVersion</key>
-	<string>110</string>
+	<string>141</string>
 	<key>SMAuthorizedClients</key>
 	<array>
-		<string>identifier "com.GemTalk.GemStone" and anchor apple generic and certificate leaf[subject.CN] = "Mac Developer: James Foster (5HVEZ5GM35)" and certificate 1[field.1.2.840.113635.100.6.2.1] /* exists */</string>
+		<string>anchor apple generic and identifier "com.GemTalk.GemStone" and (certificate leaf[field.1.2.840.113635.100.6.1.9] /* exists */ or certificate 1[field.1.2.840.113635.100.6.2.6] /* exists */ and certificate leaf[field.1.2.840.113635.100.6.1.13] /* exists */ and certificate leaf[subject.OU] = "72G58AHU7P")</string>
 	</array>
 </dict>
 </plist>
