--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ DerivedData/
 GemStone.xcodeproj/project.xcworkspace/
 GemStone.xcodeproj/xcuserdata/
 GemStoneApp.dmg
+GemStone.xcodeproj/xcshareddata
