--- a/macos/Runner/Info.plist
+++ b/macos/Runner/Info.plist
@@ -30,5 +30,7 @@
 	<string>NSApplication</string>
 	<key>CFBundleDisplayName</key>
 	<string>GemStone SysAdmin</string>
+	<key>LSApplicationCategoryType</key>
+	<string>public.app-category.developer-tools</string>
 </dict>
 </plist>
