--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: gemstoneapp
 description: "GemStone SysAdmin Tools"
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-version: 1.0.0+1
+version: 2.0.0+1
 
 environment:
   sdk: ^3.5.4
@@ -15,10 +15,11 @@ dependencies:
   intl: ^0.20.1
   path_provider: ^2.1.5
   provider: ^6.1.2
+  visibility_detector: ^0.4.0+2
   yaml: ^3.1.2
 
 dev_dependencies:
-  flutter_lints: ^5.0.0
+  flutter_lints: ^6.0.0
   flutter_test:
     sdk: flutter
 
