--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: gemstoneapp
-description: "GemStone SysAdmin Tools"
+description: "GemStone/S 64 Bit SysAdmin Tools"
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
 version: 2.0.0+1
@@ -15,7 +15,9 @@ dependencies:
   intl: ^0.20.1
   path_provider: ^2.1.5
   provider: ^6.1.2
+  simple_native_logger: ^1.0.0
   visibility_detector: ^0.4.0+2
+  window_manager: ^0.5.1
   yaml: ^3.1.2
 
 dev_dependencies:
